<resources>
    <string name="app_name">StoryApp</string>
    <string name="list_app_name">List Story</string>
    <string name="detail_app_name">Detail Story</string>
    <string name="add_story_app_name">Add Story</string>
    <string name="settings_app_name">Settings</string>
    <string name="logo">Logo</string>
    <string name="avatar">Avatar</string>
    <string name="name">Username</string>
    <string name="login">Login</string>
    <string name="login_error">User not found or password is wrong</string>
    <string name="login_success">Login success</string>
    <string name="logout_success">Logout success</string>
    <string name="register">Register</string>
    <string name="register_error">Registration failed, user already exists or email is invalid</string>
    <string name="register_success">Registration success</string>
    <string name="noHaveAccount">Don\'t Have an Account?</string>
    <string name="changeLanguage">Change language</string>
    <string name="email">Email</string>
    <string name="email_validate">Invalid email</string>
    <string name="password">Password</string>
    <string name="password_validate">Password less than 6 letters</string>
    <string name="add_description">Write Your Story</string>
    <string name="story_error">Added failed story</string>
    <string name="story_validate">Please enter the image file or fill in the description first</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permissions">Not getting permission</string>
    <string name="story_not_found">Story Not Found</string>
    <string name="story_success">Success added story</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Story Location</string>
    <string name="maps">maps</string>
    <string name="style_not_success">Style parsing failed</string>
    <string name="style_not_found">Can\'t find style. Error:</string>
    <string name="retry">retry</string>
</resources>